<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPF</string>
    <string name="title_activity_app_detail">Application Details</string>
    <string name="title_activity_profile_view">View Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>


    <!-- About fragment -->
    <string name="aboutLibraries_description_special1_name">LICENSE</string>
    <string name="aboutLibraries_description_special1_text">
        <![CDATA[
        License <b>LGPLv3</b><br /><br />
        &#169; 2015 - <b>Stefano Cappa</b><br />
        &#169; 2014 - <b>Jacopo Aliprandi, Dario Archetti</b><br /><br />
        Official repository<br />
        https://github.com/deib-polimi/SPF2
        ]]>
    </string>
    <string name="aboutLibraries_description_special3_name">Changelog</string>
    <string name="aboutLibraries_description_special3_text">
        <![CDATA[
        <i>Version 2.0.0</i><br />
        - New major release (2015)<br />
        <br />
        <i>Version 1.0.0</i><br />
        - Initial release (2014)
        ]]>
    </string>



    <!-- Security -->
    <string name="app_permission_intro">The following app wants to interact with SPF</string>
    <string name="app_permission_required_premission">Required permissions</string>
    <string name="app_permission_selected_persona">Persona to use</string>
    <string name="app_permission_dialog_allow">Allow</string>
    <string name="app_permission_dialog_deny">Deny</string>
    <string name="permission_register_services">Register services</string>
    <string name="permission_search_service">Search service</string>
    <string name="permission_execute_local_services">Executing local services</string>
    <string name="permission_execute_remote_services">Executing remote services</string>
    <string name="permission_read_local_profile">Read local profile</string>
    <string name="permission_write_local_profile">Write local profile</string>
    <string name="permission_read_remote_profiles">Read remote profiles</string>
    <string name="permission_notification_services">Access notification services</string>

    <!-- App -->
    <string name="drawer_opne">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <!-- App Manager -->
    <string name="app_manager_intro">This is the list of applications you have authorized to interact with SPF.</string>
    <string name="app_manager_permissions_intro">This is the list of permissions granted to this app.</string>
    <string name="app_manager_permission_list_emptyview">This app does not require any permission</string>
    <string name="app_manager_services_intro">This is the list of services registered by this app.</string>
    <string name="app_manager_services_list_emptyview">This app has not registered any service</string>
    <string name="app_manager_list_empty">No app installed</string>
    <string name="app_manager_delete_contentdesc">Delete application</string>

    <!-- Profile -->
    <string name="profile_edit_button_text">Edit</string>
    <string name="profileedit_interest_name">Interest name</string>
    <string name="profileedit_add_interest_description">Add interest</string>
    <string name="profileedit_confirm_message">"You have unsaved fields. To save them, tap the save button on the actionbar. Do you want to quit anyway?"</string>
    <string name="profileedit_confirm_yes">Yes</string>
    <string name="profileedit_confirm_no">No</string>
    <string name="profile_field_identifier">Identifier</string>
    <string name="profile_field_display_name">Display name</string>
    <string name="profile_field_photo">Photo</string>
    <string name="profile_field_birthday">Birthday</string>
    <string name="profile_field_about_me">About me</string>
    <string name="profile_field_emails">Emails</string>
    <string name="profile_field_location">Location</string>
    <string name="profile_field_status">Status</string>
    <string name="profile_field_gender">Gender</string>
    <string name="profile_field_interests">Interests</string>
    <string name="circle_public">Public</string>
    <string name="circle_all_circles">All circles</string>
    <string name="circle_private">Private</string>

    <!-- Personas -->
    <string name="title_activity_persona_circle">Privacy</string>
    <string name="personas_delete_description">Delete persona</string>
    <string name="personas_avaliable_title">Available personas</string>
    <string name="personas_add_new">Add new persona</string>
    <string name="personas_name_hint">Persona name</string>

    <!-- Contacts -->
    <string name="title_activity_contact_edit">Edit contact</string>
    <string name="contacts_circle_list_title">Available circles</string>
    <string name="contacts_circle_add_title">Add new circle</string>
    <string name="contacts_circle_add_hint">Circle name</string>
    <string name="contacts_circle_add_button_desc">Add circle</string>
    <string name="contacts_circle_emptyview_text">No circle available</string>
    <string name="contacts_people_list_title">Contacts</string>
    <string name="contacts_people_request_list_title">Contact requests</string>
    <string name="contacts_person_circle">Circles</string>
    <string name="contacts_person_circle_add">Add new circle</string>
    <string name="contacts_circle_person_add_contentdesc">Add person to circle</string>
    <string name="contacts_person_card_contentdesc">Friend profile picture</string>
    <string name="contacts_people_emptyview">No contacts available</string>
    <string name="contacts_people_requests_emptyview">No requests</string>
    <string name="contacts_people_request_imagedesc">Friend request profile picture</string>
    <string name="contacts_people_confirm_circle">Select circle</string>
    <string name="contacts_people_confirm_passphrase">Passphrase</string>

    <!-- Advertising -->
    <string name="advertising_list_switch_label">Advertise my profile</string>
    <string name="advertising_list_title">Fields to advertise</string>
    <string name="advertising_settings">Settings</string>
    <string name="advertising_advertise_applications">Advertise installed applications</string>
    <string name="advertising_persona">Persona to advertise:</string>

    <!-- Notifications fragment-->
    <string name="notifications_emptyview">No notifications available</string>
    <string name="notifications_title">Notifications</string>

    <!-- Notification service -->
    <string name="notification_title">SPF</string>
    <string name="notification_text">Proximity enabled</string>
    <string name="notification_ticker">SPF is active.</string>

    <!-- Group Info fragment-->
    <string name="services_title">Available services</string>
    <string name="connected_devices">Connected devices</string>

    <!-- OTHERS -->
    <string name="app_card_icon">App icon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="notifications_delete_contentdesc">Delete notification message</string>
    <string name="proximity_toggle_label">Proximity</string>
    <string name="groupowner_toggle_label">GroupOwner</string>
    <string name="activities_supported_verbs">Supported verbs</string>
    <string name="activities_list_empty">No verb supported.</string>
    <string name="autonomous_switch_label">Autonomous</string>


    <!-- Navigation drawer -->
    <string name="drawer_profile">Profile</string>
    <string name="drawer_personas">Personas</string>
    <string name="drawer_contacts">Contacts</string>
    <string name="drawer_notifications">Notifications</string>
    <string name="drawer_advertising">Advertising</string>
    <string name="drawer_apps">Apps</string>
    <string name="drawer_activities">Activities</string>

</resources>