<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_launcher"
            android:title="@string/drawer_personas" />
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_launcher"
            android:title="@string/drawer_contacts" />
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_launcher"
            android:title="@string/drawer_notifications" />
        <item
            android:id="@+id/navigation_item_5"
            android:icon="@drawable/ic_launcher"
            android:title="@string/drawer_advertising" />
        <item
            android:id="@+id/navigation_item_6"
            android:icon="@drawable/ic_launcher"
            android:title="@string/drawer_apps" />
        <item
            android:id="@+id/navigation_item_7"
            android:icon="@drawable/ic_launcher"
            android:title="@string/drawer_activities" />
    </group>
</menu>