<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/content_outer_padding"
        android:text="@string/personas_avaliable_title" />

    <ListView
        android:id="@+id/personas_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/content_outer_padding"
        android:paddingRight="@dimen/content_outer_padding"
        android:paddingTop="@dimen/content_outer_padding"
        android:text="@string/personas_add_new" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/content_outer_padding">

        <EditText
            android:id="@+id/personas_new_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/personas_name_hint"
            android:inputType="text" />

        <com.mikepenz.iconics.view.IconicsCompatButton
            android:id="@+id/personas_new_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:contentDescription="@string/personas_add_new"
            android:text="{faw-user-plus}"
            android:textAllCaps="false"
            android:textColor="@color/white_main"
            android:textSize="26sp" />
    </LinearLayout>

</LinearLayout>