<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5" >

    <ListView
        android:id="@+id/navigation_entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        tools:context="it.polimi.spf.app.navigation.NavigationDrawerFragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/groupOwner_switch" />

    <Switch
        android:id="@+id/groupOwner_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/navigation_entry_padding"
        android:textSize="@dimen/navigation_entry_text_size"
        android:textOn="ON"
        android:textOff="OFF"
        android:text="@string/groupowner_toggle_label"
        android:layout_above="@+id/group_autonomous_switch"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/group_autonomous_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/navigation_entry_padding"
        android:textSize="@dimen/navigation_entry_text_size"
        android:textOn="ON"
        android:textOff="OFF"
        android:text="@string/autonomous_switch_label"
        android:checked="false"
        android:layout_above="@+id/connect_switch"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/connect_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/navigation_entry_padding"
        android:textSize="@dimen/navigation_entry_text_size"
        android:textOn="ON"
        android:textOff="OFF"
        android:text="@string/proximity_toggle_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>